--- a/src/app/components/manager/manager.component.html
+++ b/src/app/components/manager/manager.component.html
@@ -98,6 +98,20 @@
         <td mat-cell *matCellDef="let row"> {{row.mobileNo}} </td>
       </ng-container>
 
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef> Actions </th>
+        <td mat-cell *matCellDef="let row">
+          <div style="display: flex">
+            <button mat-icon-button>
+              <mat-icon (click)="onUpdate()">edit</mat-icon>
+            </button>
+            <button mat-icon-button>
+              <mat-icon (click)="onDelete()">delete</mat-icon>
+            </button>
+          </div>
+        </td>
+      </ng-container>
+
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
