--- a/src/styles.scss
+++ b/src/styles.scss
@@ -81,3 +81,17 @@ label{
   font-size: 12px
 }
 
+mat-dialog-container {
+  padding: 0px !important;
+  overflow: unset !important;
+}
+
+mat-dialog-actions {
+  //padding: 0 !important;
+  margin-bottom: 0 !important;
+}
+
+mat-dialog-content {
+  margin: 0 !important;
+  padding: 0 !important;
+}
